deploy/docker-compose/envoy.yaml
---
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
                - name: local_service
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: upstream
            http_filters:
              - name: envoy.filters.http.wasm
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    name: kuadrant_wasm
                    root_id: kuadrant_wasm
                    vm_config:
                      vm_id: vm.sentinel.kuadrant_wasm
                      runtime: envoy.wasm.runtime.v8
                      code:
                        local:
                          filename: /opt/kuadrant/wasm/wasm_shim.wasm
                      allow_precompiled: true
                    configuration:
                      "@type": "type.googleapis.com/google.protobuf.StringValue"
                      value: >
                        {
                          "failure_mode_deny": true,
                          "rate_limit_policies": [
                            {
                              "name": "rlp-a",
                              "rate_limit_domain": "rls-domain-a",
                              "upstream_cluster": "limitador",
                              "hostnames": ["*.a.com"],
                              "gateway_actions": [
                                {
                                  "configurations": [
                                    {
                                      "actions": [
                                        {
                                          "request_headers": {
                                            "header_name": "not-existing-header",
                                            "skip_if_absent": true,
                                            "descriptor_key": "my-not-existing-header"
                                          }
                                        }
                                      ]
                                    }
                                  ]
                                }
                              ]
                            },
                            {
                              "name": "rlp-b",
                              "rate_limit_domain": "rls-domain-b",
                              "upstream_cluster": "limitador",
                              "hostnames": ["*.b.com"],
                              "gateway_actions": [
                                {
                                  "rules": [
                                    {
                                      "paths": ["/not/exising/path"]
                                    }
                                  ],
                                  "configurations": [
                                    {
                                      "actions": [
                                        {
                                          "generic_key": {
                                            "descriptor_key": "some_generic_key",
                                            "descriptor_value": "some_generic_value"
                                          }
                                        }
                                      ]
                                    }
                                  ]
                                }
                              ]
                            },
                            {
                              "name": "rlp-c",
                              "rate_limit_domain": "rls-domain-c",
                              "upstream_cluster": "limitador",
                              "hostnames": ["*.c.com"],
                              "gateway_actions": [
                                {
                                  "rules": [
                                    {
                                      "paths": ["/get"],
                                      "hosts": ["test.c.com"],
                                      "method": ["GET"]
                                    }
                                  ],
                                  "configurations": [
                                    {
                                      "actions": [
                                        {
                                          "generic_key": {
                                            "descriptor_key": "some_generic_key_for_c",
                                            "descriptor_value": "some_generic_value_for_c"
                                          }
                                        }
                                      ]
                                    },
                                    {
                                      "actions": [
                                        {
                                          "remote_address": {}
                                        }
                                      ]
                                    },
                                    {
                                      "actions": [
                                        {
                                          "header_value_match": {
                                            "descriptor_value": "header_value_match_value",
                                            "headers": [
                                              {
                                                "name": "My-Custom-Header-01",
                                                "exact_match": "my-custom-header-value",
                                                "invert_match": false
                                              }
                                            ]
                                          }
                                        }
                                      ]
                                    },
                                    {
                                      "actions": [
                                        {
                                          "request_headers": {
                                            "header_name": "My-Custom-Header-02",
                                            "skip_if_absent": true,
                                            "descriptor_key": "my-custom-header-key"
                                          }
                                        }
                                      ]
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
              - name: envoy.filters.http.router
  clusters:
    - name: upstream
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: upstream
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: upstream
                  port_value: 80
    - name: limitador
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: limitador
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: limitador
                  port_value: 8081
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
